fix: solve issue related to obtain sessions without all parameters