@@ -38,37 +38,106 @@ class ProviderOrchestratorTest {
     }
 
     @Test
-    @DisplayName("returns primary provider sessions when available")
-    void shouldReturnPrimarySessionsWhenAvailable() {
-        final Session session = BuilderHelper.buildSession();
-        final List<Session> sessions = List.of(session);
+    @DisplayName("should return primary sessions when not empty and all params provided")
+    void shouldReturnPrimarySessionsWhenNotEmptyAndAllParamsProvided() {
+        final Session session = BuilderHelper.buildSessionWithKey(1234);
+        when(primaryProvider.getSessions("RACE", 2024, "Italy")).thenReturn(List.of(session));
 
-        when(primaryProvider.getSessions("race", 2023, "UK")).thenReturn(sessions);
-
-        final List<Session> result = orchestrator.getSessions("race", 2023, "UK");
+        final List<Session> result = orchestrator.getSessions("RACE", 2024, "Italy");
 
         assertEquals(1, result.size());
-        verify(sessionRepository, never()).saveAll(any());
+        assertEquals(1234, result.get(0).getSessionKey());
+
+        verifyNoInteractions(fallbackProvider, sessionRepository);
     }
 
     @Test
-    @DisplayName("uses fallback provider when primary is empty")
-    void shouldFallbackWhenPrimaryReturnsEmpty() {
-        final Session fallbackSession = BuilderHelper.buildSession();
-        fallbackSession.setSessionKey(1234);
+    @DisplayName("should fallback when primary empty even if all params provided")
+    void shouldFallbackWhenPrimaryEmptyEvenIfAllParamsProvided() {
+        final Integer sessionKey = 1234;
+        final Session session = BuilderHelper.buildSessionWithKey(sessionKey);
 
-        final List<Session> fallbackSessions = List.of(fallbackSession);
-        final List<Driver> drivers = List.of(BuilderHelper.buildDriver(null));
+        when(primaryProvider.getSessions("RACE", 2024, "Italy")).thenReturn(Collections.emptyList());
+        when(fallbackProvider.getSessions("RACE", 2024, "Italy")).thenReturn(List.of(session));
+        when(sessionRepository.existsBySessionKey(sessionKey)).thenReturn(false);
+        when(fallbackProvider.getDrivers(sessionKey))
+                .thenReturn(List.of(BuilderHelper.buildDriverWithName(null, "Max")));
 
-        when(primaryProvider.getSessions("qualifying", 2023, "UK")).thenReturn(Collections.emptyList());
-        when(fallbackProvider.getSessions("qualifying", 2023, "UK")).thenReturn(fallbackSessions);
-        when(fallbackProvider.getDrivers(1234)).thenReturn(drivers);
-        when(sessionRepository.saveAll(fallbackSessions)).thenReturn(fallbackSessions);
+        final List<Session> result = orchestrator.getSessions("RACE", 2024, "Italy");
 
-        List<Session> result = orchestrator.getSessions("qualifying", 2023, "UK");
+        assertTrue(result.isEmpty());
 
-        assertEquals(1, result.size());
-        assertEquals(drivers, result.getFirst().getDrivers());
-        verify(sessionRepository).saveAll(fallbackSessions);
+        verify(sessionRepository).saveAll(anyList());
+    }
+
+    @Test
+    @DisplayName("should fallback when primary not empty but missing some params")
+    void shouldFallbackWhenPrimaryNotEmptyButMissingSomeParams() {
+        final Integer primarySessionKey = 1234;
+        final Integer fallbackSessionKey = 5678;
+        Session primarySession = BuilderHelper.buildSessionWithKey(primarySessionKey);
+        Session fallbackSession = BuilderHelper.buildSessionWithKey(fallbackSessionKey);
+
+        when(primaryProvider.getSessions("RACE", null, null)).thenReturn(List.of(primarySession));
+        when(fallbackProvider.getSessions("RACE", null, null)).thenReturn(List.of(fallbackSession));
+        when(sessionRepository.existsBySessionKey(fallbackSessionKey)).thenReturn(false);
+        when(fallbackProvider.getDrivers(fallbackSessionKey))
+                .thenReturn(List.of(BuilderHelper.buildDriverWithName(fallbackSession, "Max")));
+
+        final List<Session> result = orchestrator.getSessions("RACE", null, null);
+
+        assertEquals(List.of(primarySession), result);
+
+        verify(sessionRepository).saveAll(anyList());
+    }
+
+    @Test
+    @DisplayName("should not save sessions if all fallback sessions already exist")
+    void shouldNotSaveIfAllFallbackSessionsAlreadyExist() {
+        final Integer sessionKey = 1234;
+        final Session fallbackSession = BuilderHelper.buildSessionWithKey(sessionKey);
+
+        when(primaryProvider.getSessions("RACE", 2024, "UK")).thenReturn(Collections.emptyList());
+        when(fallbackProvider.getSessions("RACE", 2024, "UK")).thenReturn(List.of(fallbackSession));
+        when(sessionRepository.existsBySessionKey(sessionKey)).thenReturn(true);
+
+        final List<Session> result = orchestrator.getSessions("RACE", 2024, "UK");
+
+        assertTrue(result.isEmpty());
+        verify(sessionRepository, never()).saveAll(anyList());
+    }
+
+    @Test
+    @DisplayName("should attach drivers from fallback provider before saving sessions")
+    void shouldAttachDriversFromFallbackProviderBeforeSaving() {
+        final Integer sessionKey = 1234;
+        final Session fallbackSession = BuilderHelper.buildSessionWithKey(sessionKey);
+        final Driver driver = BuilderHelper.buildDriverWithName(fallbackSession, "Charles");
+
+        when(primaryProvider.getSessions("RACE", 2024, "Monaco")).thenReturn(Collections.emptyList());
+        when(fallbackProvider.getSessions("RACE", 2024, "Monaco")).thenReturn(List.of(fallbackSession));
+        when(sessionRepository.existsBySessionKey(sessionKey)).thenReturn(false);
+        when(fallbackProvider.getDrivers(sessionKey)).thenReturn(List.of(driver));
+
+        orchestrator.getSessions("RACE", 2024, "Monaco");
+
+        assertNotNull(fallbackSession.getDrivers());
+        assertEquals("Charles", fallbackSession.getDrivers().getFirst().getFullName());
+        assertEquals(fallbackSession, fallbackSession.getDrivers().getFirst().getSession());
+
+        verify(sessionRepository).saveAll(List.of(fallbackSession));
+    }
+
+    @Test
+    @DisplayName("should treat invalid year (<=0) as null")
+    void shouldTreatInvalidYearAsNull() {
+        when(primaryProvider.getSessions("RACE", null, "France")).thenReturn(Collections.emptyList());
+        when(fallbackProvider.getSessions("RACE", null, "France")).thenReturn(Collections.emptyList());
+
+        final List<Session> result = orchestrator.getSessions("RACE", -1, "France");
+
+        assertTrue(result.isEmpty());
+        verify(primaryProvider, times(2)).getSessions("RACE", null, "France");
+        verify(fallbackProvider).getSessions("RACE", null, "France");
     }
 }
